chore preview feature in gradle and java jar call